# TAXI_DRIVER

./: .babelrc  README.md  __init__.py  package-lock.json  package.json  pyproject.toml  requirements.txt  taxi_list.csv
.next/cache/autodll-webpack-plugin/: package.json.hash
.next/cache/autodll-webpack-plugin/development_instance_0_15d22e77fce5c3ff2a9938231facff45/: stats.json
.next/server/static/development/pages/: _app.js  _app.js.map  index.js  index.js.map
.next/static/development/pages/: _app.js  _app.js.map  index.js  index.js.map
.next/static/runtime/: main.js  webpack.js  webpack.js.map
.next/static/webpack/static/development/pages/: index.js.0169ef1fb2b9032ac6cf.hot-update.js  index.js.0169ef1fb2b9032ac6cf.hot-update.js.map  index.js.043ce58abfe21345652c.hot-update.js  index.js.043ce58abfe21345652c.hot-update.js.map  index.js.08c01d4829087cfcbcdc.hot-update.js  index.js.08c01d4829087cfcbcdc.hot-update.js.map  index.js.0ae9533c812c9515591d.hot-update.js  index.js.0ae9533c812c9515591d.hot-update.js.map  index.js.17103b23e5908494a0c8.hot-update.js  index.js.17103b23e5908494a0c8.hot-update.js.map  index.js.1e58d10418370422a747.hot-update.js  index.js.1e58d10418370422a747.hot-update.js.map  index.js.232b1feb8d07d4563968.hot-update.js  index.js.232b1feb8d07d4563968.hot-update.js.map  index.js.2e18eb81347bba78887d.hot-update.js  index.js.2e18eb81347bba78887d.hot-update.js.map  index.js.3308c8f32a718441be03.hot-update.js  index.js.3308c8f32a718441be03.hot-update.js.map  index.js.3d68e120d492d2d05f0e.hot-update.js  (+41 more)
pages/: index.jsx  map.jsx
