[tool.poetry]
name = "taxidriver-1"
version = "0.1.0"
description = ""
authors = ["Vinicius Lago Gehrke <vinictus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fiona = "^1.8"
geopandas = "^0.6.2"
pandas = "^0.25.3"
shapely = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
